crates/hird-check/tests/snapshots/actors__handler_unknown_constructor_rejected.snap
---
source: crates/hird-check/tests/actors.rs
expression: "check_str(\"type St = St(Int)\\n\\\n         actor A {\\n\\\n           state: St,\\n\\\n           message: Msg = | Stop,\\n\\\n           init: fn(s: St) -> St ! {} = s,\\n\\\n           handle Nope, st -> St ! {} = st,\\n\\\n         }\")"
---
St : Int → St
Stop : Msg
error[C0041] 24..25: actor `A` does not handle message variant `Stop`
error[C0007] 100..105: unknown constructor `Nope`
