crates/hird-check/tests/snapshots/actors__install_then_spawn_accepted.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Halt : PlannerMsg
Path : String → Path
Plan : Path → PlannerMsg
St : Int → St
main : St → Pid<PlannerMsg> ! {Install, Spawn<PlannerMsg>}
mock : { path: Path } → St
read_repo : { path: Path } → St ! {Tool<ReadRepo>}
