crates/hird-check/tests/snapshots/actors__message_repeated_reply_to_rejected.snap
---
source: crates/hird-check/tests/actors.rs
expression: "check_str(\"type Status = Status(Int)\\n\\\n         type St = St(Int)\\n\\\n         actor A {\\n\\\n           state: St,\\n\\\n           message: Msg = | Two(ReplyTo<Status>, ReplyTo<Status>) | Halt,\\n\\\n           init: fn(s: St) -> St ! {} = s,\\n\\\n           handle Two(a, b), st -> Next<St> ! {} = Continue(st),\\n\\\n           handle Halt, st -> Next<St> ! {} = Continue(st),\\n\\\n         }\")"
---
Halt : Msg
St : Int → St
Status : Int → Status
Two : ReplyTo<Status> → ReplyTo<Status> → Msg
error[C0044] 82..85: message constructor `Two` declares more than one `ReplyTo` field; a reply channel may appear at most once
